// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Snapshots tests should match view="contrast" snapshot 1`] = `
<div>
  <span
    class="component green contrast size-20 rectangular uppercase"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;

exports[`Status Snapshots tests should match view="muted" snapshot 1`] = `
<div>
  <span
    class="component green muted size-20 rectangular uppercase"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;

exports[`Status Snapshots tests should match view="muted-alt" snapshot 1`] = `
<div>
  <span
    class="component green muted-alt size-20 rectangular uppercase"
  >
    <span
      class="ellipsis"
    >
      Label
    </span>
  </span>
</div>
`;
